VERSION 0.5

- prototype beans now supported. prototype beans are bean instances with DI that are no singleton for
  in-application use
- context now injecteable
- Exceptions in context and bean handling reused

VERSION 0.6
- Single Parameter String resolve function
- moved from getManagedClass to constructor based solution carrying a final variable
- made an APKLIB out of this project