@@ -16,11 +16,10 @@ import android.view.View;
  * Simple inherit this class and register it as usual as a Fragment bean and all accesses
  * to injected beans will work fine :)
  *
- *
- *
  */
 public abstract class ManagedFragment extends Fragment {
 
+    // set this View from derived classes if You want to use automatic error handling
     protected View view;
 
     public ManagedFragment() {
@@ -30,7 +29,12 @@ public abstract class ManagedFragment extends Fragment {
     @Override
     public void onDestroyView() {
         super.onDestroyView();
-        if (view != null) {
+        if (view != null) { // if you use the automatic error routing extension, you MUST set the view
+                            // when inflating the form. Notice, this is normally done in the
+                            // onCreateView function. If You do not set the view field when inflating
+                            // a new view, you will create memory leaks, because all bound errorHandlers
+                            // cannot be marked for removal by the garbage collector because they are
+                            // held in the application context bound to the containing view instance!
             BaracusApplicationContext.unregisterErrorhandlersForView(this.view);
         }
     }
