@@ -9,3 +9,4 @@ VERSION 0.6
 - Single Parameter String resolve function
 - moved from getManagedClass to constructor based solution carrying a final variable
 - made an APKLIB out of this project
+- added an unified error handling technique for view components
